  - Prevent false-positive hit for "multiple_webshells_0018" rule webserver virusscanner (https://github.com/Yara-Rules/rules/blob/master/Webshells/WShell_THOR_Webshells.yar#L4764).
  - Fixes a bug in ContentOperations::LoadAllContent() if the content list had a custom content type from a module that was unvavailable.

Search v1.51.6
  - Minor fixes to help

MicroTiny v2.2.3
  - More entropy in the mt_config.js filename to fix issues with js caching when switching users.
  - Fixes in the cms_linker plugin for when trying to change a link to a CMSMS page where the alias has changed.

FileManager v1.6.8
  - Fixes an upload issue.

ModuleManager v2.1.5
  - PHP 7.2+ fixes.

CMSContentManager v1.1.7
  - Fixes an issue with changing content type after copying a content page.

DesignManager v1.1.5
  - Fixes ownership issue on templates with importing a design.


Version 2.2.8 - Flin Flon
----------------------------------
Core - General
  - Re-introduce the host_whitelist config entry that got lost in some commit somewhere.
  - Minor fix to pagination in Admin log.
  - Change Finnish locale priorities so that UTF-8 is first.
  - Minor fix to calling hooks with a single associative array parameter.
  - Adds new HookManager::do_hook_first_result() method
  - cangegroupperms now calls HookManager::do_hook_first_result
  - Minor enhancement to moduleoperations::_load_module() to check if the class exists.
  - Minor enhancement to {cms_action_url} wrt. the page to link to if not specified.
  - Deprecate CMSModule::SetParameterType and CMSModule::CreateParameter methods.
  - Deprecate ModuleOperations::GetModuleParameters() method.
  - CMSModule::RestrictUnknownParameters() now does nothing.
  - No longer warn if a module is sent a parameter that is not registered.
  Note: modules should now be cleaning parameters directly (see filter_var) from $_POST and $_REQUEST ($_GET is automatically cleaned).